--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
     "@auth/prisma-adapter": "^2.11.1",
     "@prisma/adapter-pg": "^7.4.1",
     "@prisma/client": "^7.4.1",
+    "@tailwindcss/postcss": "^4.2.1",
     "bcryptjs": "^3.0.3",
     "next": "16.1.6",
     "next-auth": "^4.24.13",
+    "next-intl": "^4.8.3",
     "pg": "^8.19.0",
+    "postcss": "^8.5.6",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "tailwindcss": "^4.2.1"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
