--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
         condition: service_healthy
     networks:
       - internal
+      - proxy_default
 
   db:
     image: postgres:15-alpine
@@ -32,6 +33,8 @@ services:
 networks:
   internal:
     driver: bridge
+  proxy_default:
+    external: true
 
 volumes:
   postgres_data:
