--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,40 +1,16 @@
 services:
   web:
     build: .
+    container_name: sevgin-me-web
     restart: always
-    ports:
-      - "127.0.0.1:3000:3000"
     env_file:
       - .env
-    depends_on:
-      db:
-        condition: service_healthy
     networks:
-      - internal
+      - sevgin-net
       - proxy_default
 
-  db:
-    image: postgres:15-alpine
-    restart: always
-    environment:
-      POSTGRES_USER: ${POSTGRES_USER:-sevginuser}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_DB: ${POSTGRES_DB:-sevginme_db}
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-sevginuser} -d ${POSTGRES_DB:-sevginme_db}"]
-      interval: 5s
-      timeout: 5s
-      retries: 5
-    networks:
-      - internal
-
 networks:
-  internal:
-    driver: bridge
+  sevgin-net:
+    external: true
   proxy_default:
     external: true
-
-volumes:
-  postgres_data:
