--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@prisma/client": "^7.4.1",
     "@tailwindcss/postcss": "^4.2.1",
     "bcryptjs": "^3.0.3",
+    "lucide-react": "^0.575.0",
     "next": "16.1.6",
     "next-auth": "^4.24.13",
     "next-intl": "^4.8.3",
@@ -21,6 +22,7 @@
     "postcss": "^8.5.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-hot-toast": "^2.6.0",
     "tailwindcss": "^4.2.1"
   },
   "devDependencies": {
