--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,8 @@ services:
     build: .
     container_name: sevgin-me-web
     restart: always
+    ports:
+      - "3000:3000"
     env_file:
       - .env
     networks:
